push the updates to .621 proprietaries that I forgot to push.

--- a/proprietary/etc/wifi/tiwlan_rfmd.ini
+++ b/proprietary/etc/wifi/tiwlan_rfmd.ini
@@ -1,5 +1,5 @@
 # Note: The letters in this file are NOT case sensitive.
-#RFMD tiwlan_rfmd_d2we.ini for DROID2WE is renamed at build time to be loaded as tiwlan_rfmd.ini 
+
 dot11BeaconPeriod = 100
 ConnSelfTimeout = 60000
 
@@ -31,9 +31,9 @@ PowerMgmtHangOverPeriod = 10    #in mSec units
 AutoPowerModeDozeMode = 3       #2 - Short Doze
                                 #3 - Long Doze
 
-AutoPowerModeActiveTh = 0       #packets per second
+AutoPowerModeActiveTh = 2       #packets per second
 
-AutoPowerModeDozeTh = 0         #packets per seconds - threshold for entering ELP in Auto mode
+AutoPowerModeDozeTh = 8         #packets per seconds - threshold for entering ELP in Auto mode
 
 defaultPowerLevel = 0   #0 - ELP
                         #1 - PD
@@ -117,9 +117,9 @@ OsDbgState = 0x01e9003c         # -1 or 0xffffffff -all (opens debug messages in
 #############################################################
 
 # LAUNCH Logging Mask
-ReportSeverityTable = 00000000
+ReportSeverityTable = 0000000
 # Default Logging Mask
-# ReportSeverityTable = 00001101
+# ReportSeverityTable = 0001101
 
 BeaconReceiveTime = 50
 
@@ -163,8 +163,6 @@ TriggeredScanTimeOut = 50000 # Maximum time in Us between 2 channels on triggere
 PsPollDeliveryFailureRecoveryPeriod = 20		# Time in Ms to stay ACTIVE ('0' to disable feature)
 ConsecutivePsPollDeliveryFailureThreshold = 4   # Number of failed PsPoll's to start ACTIVE time out
 
-#Auto Rx streaming
-PsTrafficPeriod = 20
 
 # Weights in percent for RSSI/SNR Average calculations
 RssiBeaconAverageWeight = 20
@@ -247,13 +245,13 @@ TXTraceLoss_2_4G = 0
 TXBiPReferencePDvoltage_2_4G = 335 # Length: 1; Unit: 1mV; Format: Unsigned; Source: TI; Comment: This parameter define the reference point of the FEM power detector
 TxBiPReferencePower_2_4G = 128 # Length: 1; Unit: 1/8dB; Format: Signed; Source: TI; Comment: Reference output power that produces given reference power detector output voltage .
 TxBiPOffsetdB_2_4G = 0 # Length: 1; Unit: 1/8dB; Format: Signed; Source: Customer; Comment: This field is used to fine-tune the TX BiP by the customer
-TxPerRatePowerLimits_2_4G_Normal = 1d,1f,22,22,22,27 # Length: 6; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The limits are applied to the power control process according to the VBAT and temp range in which the FEM is operating
-TxPerRatePowerLimits_2_4G_Degraded = 19,1f,22,22,22,25 # Length: 6; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The limits are applied to the power control process according to the VBAT and temp range in which the FEM is operating
-TxPerRatePowerLimits_2_4G_Extreme = 16,1d,1e,20,21,24 # Length: 6; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The limits are applied to the power control process according to the VBAT and temp range in which the FEM is operating
+TxPerRatePowerLimits_2_4G_Normal = 18,1a,24,26,27,27 # Length: 6; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The limits are applied to the power control process according to the VBAT and temp range in which the FEM is operating
+TxPerRatePowerLimits_2_4G_Degraded = 18,1a,22,25,25,27 # Length: 6; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The limits are applied to the power control process according to the VBAT and temp range in which the FEM is operating
+TxPerRatePowerLimits_2_4G_Extreme = 16,1a,1e,20,24,25 # Length: 6; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The limits are applied to the power control process according to the VBAT and temp range in which the FEM is operating
 DegradedLowToNormalThr_2_4G = 30 # Length: 1; Unit: 1/10 volts; Format: Unsigned; Source: TI; Comment: The limits are applied to the power control process according to the VBAT and temp range in which the FEM is operating
 NormalToDegradedHighThr_2_4G = 45 # Length: 1; Unit: 1/10 volts; Format: Unsigned; Source: TI; Comment: The limits are applied to the power control process according to the VBAT and temp range in which the FEM is operating
-TxPerChannelPowerLimits_2_4G_11b = 26,50,50,50,50,50,50,50,50,50,26,50,50,50 # Length: 14; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The purpose of this table is to allow clipping of the maximum output power on certain channels
-TxPerChannelPowerLimits_2_4G_OFDM = 21,50,50,50,50,50,50,50,50,50,21,50,50,50 # Length: 14; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The purpose of this table is to allow clipping of the maximum output power on certain channels
+TxPerChannelPowerLimits_2_4G_11b = 50,50,50,50,50,50,50,50,50,50,50,50,50,50 # Length: 14; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The purpose of this table is to allow clipping of the maximum output power on certain channels
+TxPerChannelPowerLimits_2_4G_OFDM = 22,50,50,50,50,50,50,50,50,50,24,50,50,50 # Length: 14; Unit: 1/2dB; Format: Signed; Source: Customer; Comment: The purpose of this table is to allow clipping of the maximum output power on certain channels
 TxPDVsRateOffsets_2_4G = 01,02,02,02,02,00 # Length: 6; Unit: 1/8dB; Format: Signed; Source: TI; Comment: This parameter is a power detector offset value used to correct the power detector curve for each rate group
 TxIbiasTable_2_4G = 31,31,36,36,3b,3b # Length: 6; Unit: Codeword ; Format: Unsigned; Source: TI; Comment: This parameter sets the bias current provided by the SoC to the PA in the FEM. Options (MCS7, 54/48, 36/24, 18/12, 9/6, 11b)
 RxFemInsertionLoss_2_4G = 14 # Length: 1; Unit: 1/8dB; Format: Unsigned; Source: TI; Comment: This parameter specifies the received insertion loss of the WL127x
